# land-price-prediction

./: .gitignore  build.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel-frontend.json  vercel.json  vite.config.js
api/: index.py  predict.py  requirements.txt  test.py
backend/: app.py  create_sample_data.py  main.py  main_light.py  main_simple.py  main_ultra_light.py  requirements.txt  users.db
backend/static/: columns.json
backend/static/css/: app.css
backend/templates/: app.html
src/: App.css  App.jsx
src/components/: Footer.css  Footer.jsx  Navbar.css  Navbar.jsx  PredictionForm.css  PredictionForm.jsx
src/config/: api.js
src/pages/: Cities.css  Cities.jsx  Contact.css  Contact.jsx  Home.css  Home.jsx  Lands.css  Lands.jsx  Prices.css  Prices.jsx
src/services/: predictionService.js
vite-land-prediction-naresh/: package-lock.json  package.json
