[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "land-price-prediction"
version = "1.0.0"
description = "Land Price Prediction ML Application"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "scikit-learn==1.4.0",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "matplotlib==3.8.2",
    "flask-cors==4.0.0"
]
